--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>this is h1</h1>
 <ul>
-	<li>this is li</li>
-	<li>this is li</li>
+	<li>this is 1</li>
+	<li>this is 2</li>
 </ul>
 <p style="color:rgb(255,0,0)">this is html</p>
 <a href="http://www.baidu.com">this is tag</a>
